--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,7 @@ services:
         target: /etc/nginx/user_conf.d/nginx-sp-mini.conf
     volumes:
       - ome-conf:/opt/ovenmediaengine/bin/conf
-      - nginx_secrets:/etc/letsencrypt
+      - nginx_secrets:/etc/letsencrypt:ro
       - ome-media:/usr/share/nginx/html/hls:ro
     networks:
       - public
@@ -154,6 +154,41 @@ services:
     restart: always
     networks:
       - private
+
+
+
+  # ✅ Airflow for Mac
+  airflow:
+    image: drakesoftware/airflow-arm64:latest # Use your custom-built image tag
+    container_name: airflow
+    command: ["airflow", "webserver"]
+    ports:
+      - "8089:8080" # Airflow UI exposed on port 8089
+    volumes:
+      - airflow_logs:/opt/airflow/logs
+    environment:
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+      AIRFLOW__CORE__FERNET_KEY: ""
+      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: "true"
+    restart: unless-stopped
+    networks:
+      - private
+
+  # ✅ Keycloak Service (Basic - H2 DB)
+  keycloak:
+    image: drakesoftware/keycloak-arm64:latest
+    container_name: keycloak
+    ports:
+      - "8090:8080"  # Keycloak UI will be available on http://localhost:8080
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    restart: unless-stopped
+    networks:
+      - private
+
+
 configs:
   nginx_sp_mini_config: 
     file: ./nginx-sp-mini.conf
@@ -181,6 +216,8 @@ volumes:
   relay-server-logs:
     driver: local
   ome-media:
+    driver: 
+  airflow_logs:
     driver: local
 
 
