--- a/sp-coach-app/Dockerfile
+++ b/sp-coach-app/Dockerfile
@@ -23,11 +23,14 @@ RUN npm run build --production
 FROM nginx:alpine
 
 COPY --from=build /app/dist/sp-coach-app/browser /usr/share/nginx/html
+COPY config.template.js /usr/share/nginx/html/
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 4300
 
-# Start Nginx when the container starts
-CMD ["nginx", "-g", "daemon off;"]
+# Start Nginx
+ENTRYPOINT ["/entrypoint.sh"]
