--- a/tagging-app/Dockerfile
+++ b/tagging-app/Dockerfile
@@ -24,6 +24,9 @@ FROM nginx:alpine
 
 # Copy the build output to the Nginx HTML directory
 COPY --from=build /app/dist/mob-tagging-app/browser /usr/share/nginx/html
+COPY config.template.js /usr/share/nginx/html/
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 # Copy the Nginx configuration file
 COPY nginx.conf /etc/nginx/conf.d/default.conf
@@ -31,5 +34,5 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Expose port 4600
 EXPOSE 4600
 
-# Start Nginx when the container starts
-CMD ["nginx", "-g", "daemon off;"]
+# Start Nginx
+ENTRYPOINT ["/entrypoint.sh"]
