--- a/compose-production/docker-compose-mac.yml
+++ b/compose-production/docker-compose-mac.yml
@@ -165,10 +165,11 @@ services:
     image: drakesoftware/keycloak-arm64:latest
     container_name: keycloak
     ports:
-      - "8090:8080"  # Keycloak UI will be available on http://localhost:8080
+      - "8090:8080"  # Keycloak UI will be available on http://localhost:8090
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+    command: start-dev
     restart: unless-stopped
     networks:
       - private
