--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -180,6 +180,7 @@ server {
 
         # SNI so OME sees the right hostname
         proxy_ssl_server_name on;
+        proxy_ssl_name $host;
         proxy_ssl_verify      off;
 
         # Keep the upstream connection open
