testing demo.sql

--- a/sp-db/Dockerfile
+++ b/sp-db/Dockerfile
@@ -12,4 +12,4 @@ VOLUME /var/lib/postgresql/data
 # Copy your backup file into the initialization directory.
 # Any .sql or .sh file in /docker-entrypoint-initdb.d/ will be executed
 # when the container is initialized (i.e. when the data directory is empty).
-COPY postgres-backup/half-stack.sql /docker-entrypoint-initdb.d/
+COPY postgres-backup/demo.sql /docker-entrypoint-initdb.d/
