changes for the thumbnail

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 HOST_NAME=sp-mini.pro
-#OM_HOST_NAME needs to be in double-quotes
 OM_HOST_NAME=om.sp-mini.pro
 PLAYER_HOST_NAME=om.sp-mini.pro
 API_HOST_NAME=api.sp-mini.pro
-RTMP_HOST_NAME=rtmp.sp-mini.pro
+RTMP_HOST_NAME=om.sp-mini.pro
 RELAY_HOST_NAME=relay.sp-mini.pro
 HLS_HOST_NAME=hls.sp-mini.pro
