added thumbnail host

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ API_HOST_NAME=api.sp-mini.pro
 RTMP_HOST_NAME=om.sp-mini.pro
 RELAY_HOST_NAME=relay.sp-mini.pro
 HLS_HOST_NAME=hls.sp-mini.pro
+COACH_APP_HOST=coach.sp-mini.pro
