--- a/compose.yml
+++ b/compose.yml
@@ -144,6 +144,7 @@ services:
       SP_RELAY_URL: "https://${RELAY_HOST_NAME}"
       RTMP_URL: "rtmp://${RTMP_HOST_NAME}"
       PLAYER_URL: "https://${PLAYER_HOST_NAME}"
+      THUMBNAIL_HOST: "http://${COACH_APP_HOST}"
     restart: always
     networks:
       - private
